VPC.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'CloudFormation For VPC'

Resources: 
 MyVPC: 
   Type: 'AWS::EC2::VPC' 
   Properties: 
     CidrBlock: '172.16.0.0/16'
     EnableDnsSupport: true 
     EnableDnsHostnames: true 
     Tags: 
       - Key: Name
         Value: MyVPC

  #PUBLIC SUBNET IN AZ1 
 PublicSubnet1A: 
   Type: 'AWS::EC2::Subnet'
   Properties: 
     VpcId: !Ref MyVPC 
     CidrBlock: '172.16.1.0/24'
     AvailabilityZone: !Select [0, !GetAZs '']
     MapPublicIpOnLaunch: true 
     Tags: 
       - Key: Name 
         Value: PublicSubnet1A 

 # APP PRIVATE SUBNET IN AZ1 
 AppPrivateSubnet1A: 
   Type: 'AWS::EC2::Subnet'
   Properties: 
     VpcId: !Ref MyVPC 
     CidrBlock: '172.16.2.0/24'
     AvailabilityZone: !Select [0, !GetAZs '']
     Tags: 
       - Key: Name
         Value: AppPrivateSubnet1A

 # DATA PRIVATE SUBNET IN AZ1 
 DataPrivateSubnet1A: 
   Type: 'AWS::EC2::Subnet'
   Properties: 
     VpcId: !Ref MyVPC 
     CidrBlock: '172.16.3.0/24'
     AvailabilityZone: !Select [0, !GetAZs '']
     Tags: 
       - Key: Name
         Value: DataPrivateSubnet1A


 #PUBLIC SUBNET IN AZ 2
 PublicSubnet2B: 
   Type: 'AWS::EC2::Subnet'
   Properties: 
     VpcId: !Ref MyVPC 
     CidrBlock: '172.16.4.0/24'
     AvailabilityZone: !Select [1, !GetAZs '']
     MapPublicIpOnLaunch: true 
     Tags: 
       - Key: Name 
         Value: PublicSubnet2B 


# APP PRIVATE SUBNET IN AZ 2
 AppPrivateSubnet2B: 
   Type: 'AWS::EC2::Subnet'
   Properties: 
     VpcId: !Ref MyVPC 
     CidrBlock: '172.16.5.0/24'
     AvailabilityZone: !Select [1, !GetAZs '']
     Tags: 
       - Key: Name
         Value: AppPrivateSubnet2B

 # DATA PRIVATE SUBNET IN AZ 2
 DataPrivateSubnet2B: 
   Type: 'AWS::EC2::Subnet'
   Properties: 
     VpcId: !Ref MyVPC 
     CidrBlock: '172.16.6.0/24'
     AvailabilityZone: !Select [1, !GetAZs '']
     Tags: 
       - Key: Name
         Value: DataPrivateSubnet2B 


# INTERNET GATEWAY IGW 
 InternetGateway: 
   Type: 'AWS::EC2::InternetGateway'
   Properties: 
     Tags: 
       - Key: Name 
         Value: MyVPC-IGW 


  # ATTACH GATEWAY 
 AttachGateway: 
   Type: 'AWS::EC2::VPCGatewayAttachment'
   Properties: 
     VpcId: !Ref MyVPC 
     InternetGatewayId: !Ref InternetGateway 




# PUBLIC ROUTE TABLE 
 PublicRouteTable:
   Type: 'AWS::EC2::RouteTable'
   Properties: 
     VpcId: !Ref MyVPC 
     Tags: 
       - Key: Name 
         Value:  PublicRouteTable 

# PUBLIC ROUTE 
 PublicRoute: 
   Type: 'AWS::EC2::Route'
   DependsOn: AttachGateway 
   Properties: 
     RouteTableId: !Ref PublicRouteTable 
     DestinationCidrBlock: '0.0.0.0/0'
     GatewayId: !Ref InternetGateway 


#PUBLICSUBNETASSOCIATION 
 PublicSubnet1ARouteTableAssociation: 
   Type: 'AWS::EC2::SubnetRouteTableAssociation'
   Properties: 
     SubnetId: !Ref PublicSubnet1A
     RouteTableId: !Ref PublicRouteTable


# BASTION HOST 
 BastionHost: 
   Type: 'AWS::EC2::Instance' 
   Properties: 
     InstanceType: t2.micro 
     KeyName: bastionkey
     ImageId: ami-053a45fff0a704a47 
     SubnetId: !Ref PublicSubnet1A 
     SecurityGroupIds: 
       - !Ref BastionSG 
     Tags:
       - Key: Name 
         Value: BastionHost

# BASTION SECURITY GROUP 
 BastionSG: 
   Type: 'AWS::EC2::SecurityGroup'
   Properties: 
     GroupDescription: 'Enable SSH access'
     VpcId: !Ref MyVPC 
     SecurityGroupIngress: 
       - IpProtocol: tcp
         FromPort: 22 
         ToPort: 22 
         CidrIp: 98.43.157.35/32 


# APP INSTANCE 1A
 AppInstance1A: 
   Type: 'AWS::EC2::Instance'
   Properties: 
     InstanceType: t2.micro
     KeyName: bastionkey 
     ImageId: ami-053a45fff0a704a47 
     SubnetId: !Ref AppPrivateSubnet1A 
     SecurityGroupIds: 
       - !Ref AppInstance1ASG
     Tags:
       - Key: Name 
         Value: App1 


# APP INSTANCE 2B
 AppInstance2B: 
   Type: 'AWS::EC2::Instance'
   Properties: 
     InstanceType: t2.micro
     ImageId: ami-053a45fff0a704a47 
     SubnetId: !Ref AppPrivateSubnet2B 
     SecurityGroupIds: 
       - !Ref AppInstance2BSG
     Tags:
       - Key: Name 
         Value: App2



# SG APP 1A 
 AppInstance1ASG: 
   Type: 'AWS::EC2::SecurityGroup'
   Properties:
     GroupDescription: 'Allow SSH access from Bastion'
     VpcId: !Ref MyVPC 
     SecurityGroupIngress: 
       - IpProtocol: tcp
         FromPort: 22 
         ToPort: 22 
         SourceSecurityGroupId: !Ref BastionSG
     


# SG APP 2B
 AppInstance2BSG: 
   Type: 'AWS::EC2::SecurityGroup'
   Properties: 
     GroupDescription: 'Allow ICMP ping from APp1'
     VpcId: !Ref MyVPC 
     SecurityGroupIngress: 
       - IpProtocol: icmp
         FromPort: -1
         ToPort: -1
         SourceSecurityGroupId: !Ref AppInstance1ASG
